[package]
name = "webhook_relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
clap = { version = "4.5.21", features = ["derive"] }
